fs_jul19 Alex Andrutskii solution

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
@@ -9,11 +9,37 @@
           maximum-scale=1.0,
           minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>MOYO card product</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-
+<body class="body">
+<ul class="card-list">
+  <li class="card-list__item" data-qa="card">
+    <div class="card-list__item-image-wrapper">
+        <img class="card-list__item-image" src="./images/imac.jpeg" alt="">
+    </div>
+    <h5 class="card-list__item-title">
+      <a class="card-list__item-link" href="#">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</a>
+    </h5>
+    <p class="card-list__item-code">Код товара: 195434</p>
+    <div class="card-list__item-rate-and-review">
+      <div class="card-list__item-rate">
+        <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
+        <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
+        <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
+        <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
+        <span class="card-list__item-rate-star"></span>
+      </div>
+      <p class="card-list__item-review">Отзывов: 5</p>
+    </div>
+    <div class="card-list__item-price">
+      <p class="card-list__item-price-label">Цена:</p>
+      <p class="card-list__item-price-value">69 999 грн</p>
+    </div>
+    <a class="card-list__item-buy" href="#" data-qa="hover">Купить</a>
+  </li>
+</ul>
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
