--- a/index.html
+++ b/index.html
@@ -14,32 +14,34 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body class="body">
-<ul class="card-list">
-  <li class="card-list__item" data-qa="card">
-    <div class="card-list__item-image-wrapper">
-        <img class="card-list__item-image" src="./images/imac.jpeg" alt="">
-    </div>
-    <h5 class="card-list__item-title">
-      <a class="card-list__item-link" href="#">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</a>
-    </h5>
-    <p class="card-list__item-code">Код товара: 195434</p>
-    <div class="card-list__item-rate-and-review">
-      <div class="card-list__item-rate">
-        <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
-        <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
-        <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
-        <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
-        <span class="card-list__item-rate-star"></span>
-      </div>
-      <p class="card-list__item-review">Отзывов: 5</p>
-    </div>
-    <div class="card-list__item-price">
-      <p class="card-list__item-price-label">Цена:</p>
-      <p class="card-list__item-price-value">69 999 грн</p>
-    </div>
-    <a class="card-list__item-buy" href="#" data-qa="hover">Купить</a>
-  </li>
-</ul>
+  <section class="card-list__wrapper">
+    <ul class="card-list">
+      <li class="card-list__item" data-qa="card">
+        <a class="card-list__item-image-link" href="#">
+            <img class="card-list__item-image" src="./images/imac.jpeg" alt="">
+          </a>
+        <h3 class="card-list__item-title">
+          <a class="card-list__item-link" href="#">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</a>
+        </h3>
+        <p class="card-list__item-code">Код товара: 195434</p>
+        <div class="card-list__item-rate-and-review">
+          <div class="card-list__item-rate">
+            <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
+            <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
+            <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
+            <span class="card-list__item-rate-star card-list__item-rate-star-active"></span>
+            <span class="card-list__item-rate-star"></span>
+          </div>
+          <p class="card-list__item-review">Отзывов: 5</p>
+        </div>
+        <div class="card-list__item-price">
+          <p class="card-list__item-price-label">Цена:</p>
+          <p class="card-list__item-price-value">69 999 грн</p>
+        </div>
+        <a class="card-list__item-buy" href="#" data-qa="hover">Купить</a>
+      </li>
+    </ul>
+</section>
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
